changing the style for tht title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>we share the sun the stars the moons, why don't we share the same love!!! </h1>
+    <h1>Brand new start </h1>
 
     <script src="app.js"></script>
     
