--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <h1>Brand new start </h1>
     <h1>hope of the generation</h1>
 
+    <form action="post">
+
+        <input type="text" placeholder="insert a word here">
+    </form>
+
     <script src="app.js"></script>
     
 </body>
